--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- Hackathon Rules Section -->
             <div class="hackathon-rules">
-                <h3>🏆 Gen AI Exchange Hackathon Compliant</h3>
+               <!-- <h3>🏆 Gen AI Exchange Hackathon Compliant</h3> -->
                 <div class="rules-grid">
                     <div class="rule-item">
                         <span class="rule-icon">🤖</span>
